chore: refactor fastAPI
