# fastapi_backend/app/main.py
@@ -1,11 +1,12 @@
 from fastapi import FastAPI
 from fastapi_pagination import add_pagination
-from .schemas import UserCreate, UserRead, UserUpdate
-from .users import auth_backend, fastapi_users, AUTH_URL_PATH
 from fastapi.middleware.cors import CORSMiddleware
-from .utils import simple_generate_unique_route_id
-from app.routes.items import router as items_router
-from app.config import settings
+
+from app.core.config import settings
+from app.core.utils import simple_generate_unique_route_id
+from app.core.users import auth_backend, fastapi_users, AUTH_URL_PATH
+from app.schemas import UserCreate, UserRead, UserUpdate
+from app.api.v1.router import api_router
 
 app = FastAPI(
     generate_unique_id_function=simple_generate_unique_route_id,
@@ -48,6 +49,6 @@ app.include_router(
     tags=["users"],
 )
 
-# Include items routes
-app.include_router(items_router, prefix="/items")
+# Include API V1 routes
+app.include_router(api_router, prefix="/api/v1")
 add_pagination(app)
